--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         app:cardElevation="20dp"
         app:cardCornerRadius="6dp">
 
@@ -16,7 +17,7 @@
             android:layout_width="175dp"
             android:layout_height="125dp"
             android:elevation="7dp"
-            android:src="@drawable/trailer_thumbnail_debug"
+            android:src="@drawable/trailer_thumbnail_placeholder"
             android:id="@+id/trailer_thumbnail"
             android:scaleType="fitXY"/>
 
