--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -155,115 +155,13 @@
    </android.support.v7.widget.CardView>
            <!--  TRAILERS UNIT-->
 
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent">
-
-               <android.support.v7.widget.CardView
-                   android:layout_width="match_parent"
-                   android:layout_height="190dp"
-                   android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                   android:layout_marginRight="@dimen/activity_horizontal_margin"
-                   android:layout_marginTop="20dp"
-                   app:cardElevation="10dp"
-                   app:cardCornerRadius="4dp"
-                   android:id="@+id/trailers_card">
-
-
-
-                   <TextView
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:text="Trailers"
-                       android:id="@+id/trailer_header"
-                       android:layout_marginTop="10dp"
-                       android:textAlignment="center"
-                       android:textSize="18sp"
-                       android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                       android:layout_marginRight="@dimen/activity_horizontal_margin"
-                       android:layout_marginBottom="10dp"/>
-
-
-
-                   <ProgressBar
-                       android:layout_width="40dp"
-                       android:layout_height="40dp"
-                       android:indeterminate="true"
-                       android:id="@+id/trailers_progressbar"
-                       android:layout_centerVertical="true"
-                       android:layout_centerHorizontal="true"/>
-
-               </android.support.v7.widget.CardView>
-
-               <android.support.v7.widget.RecyclerView
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:layout_marginTop="60dp"
-                   android:layout_marginBottom="60dp"
-                   android:id="@+id/trailer_recycler_view"
-                   android:orientation="horizontal"
-                   android:elevation="50dp"/>
-
-
-           </RelativeLayout>
-
+      <include layout="@layout/trailers_sublayout"/>
 
 
 
            <!--REVIEWS UNIT-->
 
-           <android.support.v7.widget.CardView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_marginLeft="@dimen/activity_horizontal_margin"
-               android:layout_marginRight="@dimen/activity_horizontal_margin"
-               android:layout_marginTop="20dp"
-               app:cardElevation="10dp"
-               app:cardCornerRadius="4dp"
-               android:id="@+id/reviews_card">
-
-               <RelativeLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent">
-
-
-                   <TextView
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:text="@string/reviews"
-                       android:id="@+id/review_header"
-                       android:layout_marginTop="10dp"
-                       android:textAlignment="center"
-                       android:textSize="18sp"
-                       android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                       android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-                   <ScrollView
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:layout_below="@+id/review_header">
-
-
-                       <android.support.v7.widget.RecyclerView
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:id="@+id/review_recycler_view"
-                           android:layout_marginTop="8dp"
-                           android:layout_marginBottom="8dp"
-                           android:layout_below="@+id/review_header"/>
-
-                   </ScrollView>
-
-                   <ProgressBar
-                       android:layout_width="40dp"
-                       android:layout_height="40dp"
-                       android:indeterminate="true"
-                       android:id="@+id/reviews_progressbar"
-                       android:layout_centerVertical="true"
-                       android:layout_centerHorizontal="true"/>
-               </RelativeLayout>
-
-           </android.support.v7.widget.CardView>
+      <include layout="@layout/reviews_sublayout"/>
         </LinearLayout>
 
 
