--- a/app/src/main/res/layout/trailers_sublayout.xml
+++ b/app/src/main/res/layout/trailers_sublayout.xml
@@ -1,7 +1,8 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/trailers_container">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
